finalize the rui table paginated component

--- a/src/remarkable-ui/charts/tables/Table.module.css
+++ b/src/remarkable-ui/charts/tables/Table.module.css
@@ -17,30 +17,37 @@
   flex: 1;
 }
 
-.scrollX table {
+.table {
   width: 100%;
   border-collapse: collapse;
 }
 
-.scrollX table th,
-td {
+.table th,
+.table td {
   border: var(--em-table-border-width-default, 1px) solid
     var(--em-table-border-color-default, #ededf1);
+  box-sizing: border-box;
+  cursor: pointer;
+  height: var(--em-table-size-cell-height_R, 2.5rem);
+  min-width: var(--em-table-size-min-width_R, 3rem);
+  padding: var(--em-table-padding-medium_R, 0.5rem);
 }
 
-.scrollX table th:first-child,
-.scrollX table td:first-child {
+.table td:hover,
+.table td:focus-within,
+.table th:hover,
+.table th:focus-within {
+  background: var(--em-table-background-color-hover-header_R, #f7f7f8);
+}
+
+.table th:first-child,
+.table td:first-child {
   border-left: none;
 }
-.scrollX table th:last-child,
-.scrollX table td:last-child {
+.table td:last-child {
   border-right: none;
 }
-.scrollX table tr:first-child th,
-.scrollX table tr:first-child td {
+.table tr:first-child th,
+.table tr:first-child td {
   border-top: none;
 }
-/* .scrollX table tr:last-child th,
-.scrollX table tr:last-child td {
-  border-bottom: none;
-} */
