--- a/src/remarkable-ui/charts/tables/components/TableBody/TableBody.module.css
+++ b/src/remarkable-ui/charts/tables/components/TableBody/TableBody.module.css
@@ -1,22 +1,13 @@
-.tableBody tr td {
-  box-sizing: border-box;
-  cursor: pointer;
-  height: var(--em-table-size-cell-height_R, 2.5rem);
-  min-width: var(--em-table-size-min-width_R, 3rem);
-  padding: var(--em-table-padding-medium_R, 0.5rem);
+.tableBodyCellIndex p {
+  color: var(--em-table-text-muted, #5c5c66) !important;
 }
 
-.tableBody tr td:hover,
-.tableBody tr td:focus-within {
-  background: var(--em-table-background-color-hover-header_R, #f7f7f8);
-}
-
-.tableBody tr td p {
+.tableBodyCell p {
   /* font-family: var(--em-table-font-family, Inter); */
+  color: var(--em-table-text-default, #212129);
   font-size: var(--em-table-font-size, 0.75rem);
   font-style: normal;
-  font-weight: var(--em-table-font-font-weight-medium_R, 500);
-  line-height: var(--em-table-font-line-height_R, 0.875rem);
-  color: var(--em-table-text-default_R, #212129);
-  padding: 0 var(--em-table-padding-small_R, 0.25rem);
+  font-weight: var(--em-table-font-weight-regular, 400);
+  line-height: 0.875rem;
+  padding: 0 var(--em-table-padding-small, 0.25rem);
 }
