page total should be fixed

--- a/src/remarkable-ui/charts/tables/Table.module.css
+++ b/src/remarkable-ui/charts/tables/Table.module.css
@@ -29,6 +29,7 @@
   box-sizing: border-box;
   cursor: pointer;
   height: var(--em-table-size-cell-height_R, 2.5rem);
+  max-height: var(--em-table-size-cell-height_R, 2.5rem);
   min-width: var(--em-table-size-min-width_R, 3rem);
   padding: var(--em-table-padding-medium_R, 0.5rem);
 }
