--- a/src/remarkable-ui/charts/tables/components/TableHeader/TableHeader.module.css
+++ b/src/remarkable-ui/charts/tables/components/TableHeader/TableHeader.module.css
@@ -3,7 +3,7 @@
   width: var(--em-table-size-min-width_R, 3rem);
 }
 
-.tableHeadIndex button {
+.tableHeadIndex button p {
   color: var(--em-table-text-muted, #5c5c66);
 }
 
@@ -22,11 +22,12 @@
 }
 
 .tableHeadCell p {
+  white-space: nowrap;
+  padding: 0 var(--em-table-padding-small, 0.25rem);
   /* font-family: var(--em-table-font-family, Inter); */
   color: var(--em-table-text-default, #212129);
   font-size: var(--em-table-font-size, 0.75rem);
   font-style: normal;
   font-weight: var(--em-table-font-font-weight-medium, 500);
   line-height: var(--em-table-font-line-height, 0.875rem);
-  padding: 0 var(--em-table-padding-small, 0.25rem);
 }
