Use default font color

--- a/src/remarkable-ui/shared/Typography/Typography.module.css
+++ b/src/remarkable-ui/shared/Typography/Typography.module.css
@@ -1,4 +1,5 @@
 .typography {
   font-family: var(--em-font-default, 'Inter', sans-serif);
   margin: unset;
+  color: var(--em-form-section-font-font-color);
 }
