wip replace css variables

--- a/src/remarkable-pro/components/charts/shared/ChartCard/ChartCard.module.css
+++ b/src/remarkable-pro/components/charts/shared/ChartCard/ChartCard.module.css
@@ -6,7 +6,7 @@
 .error svg,
 .error h2,
 .error p {
-  color: var(--em-card-error-subtitle-color-default, #d03109);
+  color: var(--em-card-error-text-default, #bc1010);
 }
 
 .rightContent {
