--- a/src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListOption/SelectListOption.module.css
+++ b/src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListOption/SelectListOption.module.css
@@ -1,13 +1,12 @@
 .listItem {
   box-sizing: border-box;
-  height: var(--em-select-list-item-size-height, 2rem);
-  max-height: var(--em-select-list-item-size-height, 2rem);
-  padding: var(--em-select-list-item-padding-default, 0.5rem);
-  border-radius: var(--em-select-list-item-border-radius-default, 0.5rem);
-  background: var(--em-select-list-item-background-color-default, #fff);
-  color: var(--em-select-list-item-label-color-default, #212129);
+  height: var(--em-sl-item-size-height, 2rem);
+  max-height: var(--em-sl-item-size-height, 2rem);
+  padding: var(--em-sl-item-padding-default, 0.5rem);
+  border-radius: var(--em-sl-item-border-radius-default, 0.5rem);
+  background: var(--em-sl-item-background-color-default, #fff);
+  color: var(--em-sl-item-left-label-text-default, #212129);
   font-style: normal;
-
   display: flex;
   outline: none;
   cursor: pointer;
@@ -39,39 +38,39 @@
 
 .listItem:hover,
 .listItem:focus {
-  background: var(--em-select-list-item-background-color-hover, #f7f7f8);
+  background: var(--em-sl-item-background-color-hover, #f7f7f8);
 }
 
 .listItem:active {
-  background: var(--em-select-list-item-background-color-pressed, #ededf1);
+  background: var(--em-sl-item-background-color-hover, #ededf1);
 }
 
 .listItem.disabled {
-  color: var(--em-select-list-item-label-color-disabled, #b8b8bd);
+  color: var(--em-sl-item-left-label-text-disabled, #b8b8bd);
   pointer-events: none;
   user-select: none;
 }
 
 .listItem .leftContent p {
-  padding: 0 var(--em-select-list-item-label-padding-default, 0.5rem);
-  /* font-family: Inter; */
-  font-size: var(--em-select-list-item-left-label-font-size, 0.75rem);
-  font-weight: var(--em-select-list-item-left-label-font-weight, 500);
-  line-height: var(--em-select-list-item-left-label-font-line-height, 0.875rem);
+  padding: 0 var(--em-sl-item-label-padding-default, 0.5rem);
+  font-size: var(--em-sl-item-left-label-font-size, 0.75rem);
+  font-weight: var(--em-sl-item-left-label-font-weight, 500);
+  line-height: var(--em-sl-item-left-label-font-line-height, 0.875rem);
+  font-family: var(--em-sl-item-left-label-font-family, 'Inter');
 }
 
 .listItem .rightContent p {
-  color: var(--em-select-list-item-right-label-color-default, #5c5c66);
-  padding: 0 var(--em-select-list-item-label-padding-default, 0.5rem);
-  /* font-family: var(--em-select-list-item-right-label-font-font-family, Inter); */
-  font-size: var(--em-select-list-item-right-label-font-size, 0.75rem);
-  font-weight: var(--em-select-list-item-right-label-font-weight, 400);
-  line-height: var(--em-select-list-item-right-label-font-line-height, 0.875rem);
+  color: var(--em-sl-item-right-label-text-default, #5c5c66);
+  padding: 0 var(--em-sl-item-label-padding-default, 0.5rem);
+  font-size: var(--em-sl-item-right-label-font-size, 0.75rem);
+  font-weight: var(--em-sl-item-right-label-font-weight, 400);
+  line-height: var(--em-sl-item-right-label-font-line-height, 0.875rem);
+  font-family: var(--em-sl-item-right-label-font-family, 'Inter');
 }
 
 .listItem.selected {
-  background: var(--em-select-list-item-background-color-selected, #212129);
-  color: var(--em-select-list-item-left-label-color-selected, #fff);
+  background: var(--em-sl-item-background-color-selected, #212129);
+  color: var(--em-sl-item-left-label-text-default, #fff);
 }
 
 .listItem.selected .leftContent p,
@@ -81,7 +80,7 @@
 
 .listItem svg,
 .listItem img {
-  width: var(--em-select-list-item-icon-size-width, 1rem);
-  height: var(--em-select-list-item-icon-size-height, 1rem);
+  width: var(--em-sl-item-icon-size-width, 1rem);
+  height: var(--em-sl-item-icon-size-height, 1rem);
   color: inherit;
 }
