--- a/src/remarkable-pro/components/editors/shared/EditorCard/EditorCard.module.css
+++ b/src/remarkable-pro/components/editors/shared/EditorCard/EditorCard.module.css
@@ -1,7 +1,7 @@
 .error svg,
 .error h2,
 .error p {
-  color: var(--em-card-error-subtitle-color-default, #d03109);
+  color: var(--em-card-error-text-default, #bc1010);
 }
 
 .card {
