--- a/src/remarkable-ui/shared/Card/CardContentInfo/CardContentInfo.module.css
+++ b/src/remarkable-ui/shared/Card/CardContentInfo/CardContentInfo.module.css
@@ -9,25 +9,21 @@
 .title {
   text-align: center;
   font-style: normal;
-  /* DENIS DISCUSS */
-  /* the name are weird and are inconsistent
-  --em-card-info-font-line-height
-  --em-card-info-font-title-weight */
-  /* expected to see --em-card-empty-title-font-color */
-  /* expected to see --em-card-empty-title-font-weight */
-  /* expected to see --em-card-empty-title-font-line-height */
+  /* DENIS MISSED */
   color: var(--em-card-empty-title-text-default, #212129);
-  font-family: var(--em-card-info-font-family, Inter);
+  font-family: var(--em-card-info-font-family, Inter, sans-serif);
   font-size: var(--em-card-info-font-size, 0.875rem);
+  font-style: normal;
   font-weight: var(--em-card-info-font-title-weight, 500);
-  line-height: var(--em-card-info-font-line-height, 1rem); /* 114.286% */
+  line-height: var(--em-card-info-font-line-height, 1rem);
 }
 
 .message {
-  color: var(--em-card-empty-subtitle-color-default, #5c5c66);
   text-align: center;
-  font-size: var(--em-card-empty-subtitle-font-size, 0.875rem);
   font-style: normal;
-  font-weight: var(--em-card-empty-subtitle-font-weight, 400);
-  line-height: var(--em-card-empty-subtitle-font-line-height, 1rem);
+  color: var(--em-card-empty-subtitle-text-default, #5c5c66);
+  font-size: var(--em-card-info-font-size, 0.875rem);
+  font-weight: var(--em-card-info-font-subtitle-weight, 400);
+  line-height: var(--em-card-info-font-line-height, 1rem);
+  font-family: var(--em-card-info-font-family, Inter, sans-serif);
 }
