--- a/src/remarkable-ui/editors/InputField/InputField.module.css
+++ b/src/remarkable-ui/editors/InputField/InputField.module.css
@@ -10,21 +10,22 @@
   border: var(--em-text-input-border-width-default, 1px) solid
     var(--em-text-input-border-color-default, #d2d2d5);
   background: var(--em-text-input-background-color-default, #f7f7f8);
-  color: var(--em-text-input-label-color-filled, #212129);
+  /* DENIS MISSED */
+  /* color: var(em-text-input-label-color-filled, #212129); */
 }
 
 .input:hover {
   background: var(--em-text-input-background-color-hover, #e4e4ea);
-  color: var(--em-text-input-label-color-hover, #5c5c66);
+  color: var(--em-text-input-label-text-hover, #5c5c66);
 }
 .input:focus-within {
   background: var(--em-text-input-background-color-hover, #e4e4ea);
-  color: var(--em-text-input-label-color-focused, #212129);
+  color: var(--em-text-input-label-text-focused, #212129);
 }
 
 .input svg {
-  width: var(--em-select-menu-icon-size-width, 1rem);
-  height: var(--em-select-menu-icon-size-height, 1rem);
+  width: var(--em-text-input-icon-size-width, 1rem);
+  height: var(--em-text-input-icon-size-height, 1rem);
 }
 
 .input input {
@@ -35,33 +36,35 @@
   white-space: nowrap;
   outline: none;
   color: inherit;
+  font-style: normal;
   width: 100%;
 
   padding: 0 var(--em-text-input-padding-default, 0.5rem);
-  /* font-family: var(--em-text-input-label-font-font-family, Inter); */
+  font-family: var(--em-text-input-label-font-family, Inter, sans-serif);
   font-size: var(--em-text-input-label-font-size, 0.75rem);
-  font-style: normal;
-  font-weight: var(--em-text-input-label-font-weight, 500);
-  line-height: var(--em-text-input-label-font-line-height, 0.875rem); /* 116.667% */
+  font-weight: var(--em-text-input-label-font-weight-default, 500);
+  line-height: var(--em-text-input-label-font-line-height, 0.875rem);
 }
 
 .input input:focus {
-  color: var(--em-text-input-label-color-focused, #212129);
+  color: var(--em-text-input-label-text-focused, #212129);
 }
 
 .input:has(input:disabled) {
-  color: var(--em-text-input-label-color-disabled, #b8b8bd);
+  /* DENIS MISSED */
+  /* color: var(em-text-input-label-color-disabled, #b8b8bd); */
   border: var(--em-text-input-border-width-default, 1px) solid
     var(--em-text-input-border-color-default, #d2d2d5);
   background: var(--em-text-input-background-color-disabled, #fff);
 }
 
 .input input::placeholder {
-  color: var(--em-text-input-label-color-default, #5c5c66);
+  color: var(--em-text-input-label-text-default, #5c5c66);
 }
 
 .input input:disabled::placeholder {
-  color: var(--em-text-input-label-color-disabled, #b8b8bd);
+  /* DENIS MISSED */
+  /* color: var(em-text-input-label-color-disabled, #b8b8bd); */
 }
 
 .input div {
@@ -77,7 +80,8 @@
 }
 
 .requiredText {
-  padding-bottom: var(--em-form-padding-small, 0.5rem);
+  /* DENIS MISSED */
+  gap: var(em-form-padding-small, 0.5rem);
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -85,4 +89,5 @@
   font-weight: var(--em-form-form-font-font-weight, 400);
   line-height: var(--em-form-form-font-line-height, 1rem);
   color: var(--em-form-section-font-font-color, #212129);
+  background: red;
 }
