--- a/src/remarkable-ui/shared/Skeleton/Skeleton.module.css
+++ b/src/remarkable-ui/shared/Skeleton/Skeleton.module.css
@@ -18,5 +18,5 @@
   background-size: 200% 100%;
   height: 100%;
   width: 100%;
-  border-radius: var(--em-border-radius-300, 12px);
+  border-radius: var(--em-border-radius-300, 0.75rem);
 }
