--- a/src/remarkable-ui/shared/BaseButton/BaseButton.module.css
+++ b/src/remarkable-ui/shared/BaseButton/BaseButton.module.css
@@ -31,7 +31,6 @@
   background: var(--em-primary-btn-background-color-disabled, #ededf1);
   color: var(--em-primary-btn-label-color-disabled, #b8b8bd);
 }
-
 .secondary {
   background: var(--em-secondary-btn-background-color-default, #ededf1);
   color: var(--em-secondary-btn-label-color-default, #212129);
@@ -50,6 +49,35 @@
 .secondary:disabled {
   background: var(--em-secondary-btn-background-color-disabled, #ededf1);
   color: var(--em-secondary-btn-label-color-disabled, #b8b8bd);
+}
+
+.ghost {
+  height: var(--em-ghost-btn-size-height, 1.25rem);
+  padding: var(--em-ghost-btn-padding-default, 0.125rem);
+  flex-shrink: 0;
+  background: transparent;
+  color: var(--em-ghost-btn-label-color-default, #212129);
+  font-family: var(--em-ghost-btn-label-font-default-font-family, Inter);
+  font-size: var(--em-ghost-btn-label-font-default-size, 0.75rem);
+  font-style: normal;
+  font-weight: var(--em-ghost-btn-label-font-default-weight, 400);
+  line-height: var(--em-ghost-btn-label-font-default-line-height, 0.875rem);
+}
+
+.ghost:hover,
+.ghost:focus {
+  border-radius: var(--em-border-radius-100, 0.25rem);
+  background: var(--em-ghost-btn-background-color-hover, #f7f7f8);
+}
+
+.ghost:active {
+  border-radius: var(--em-border-radius-100, 0.25rem);
+  background: var(--em-ghost-btn-background-color-pressed, #ededf1);
+}
+
+.ghost:disabled {
+  background: transparent;
+  color: var(--em-ghost-btn-label-color-disabled, #b8b8bd);
 }
 
 /* Common icon styles */
