--- a/src/remarkable-ui/editors/InputField/InputField.module.css
+++ b/src/remarkable-ui/editors/InputField/InputField.module.css
@@ -86,3 +86,18 @@
   line-height: var(--em-form-form-font-line-height, 1rem);
   color: var(--em-form-section-font-font-color, #212129);
 }
+
+.inputError {
+  border-color: var(--em-text-input-border-color-error, rgb(208 49 9));
+  border-width: var(--em-text-input-border-width-error, 2px);
+}
+
+.errorMessage {
+  padding-top: var(--em-form-padding-small, 0.5rem);
+  display: flex;
+  align-items: center;
+  font-size: var(--em-form-form-font-font-size-required, 0.75rem);
+  font-weight: var(--em-form-form-font-font-weight, 400);
+  line-height: var(--em-form-form-font-line-height, 1rem);
+  color: var(--em-text-input-label-color-error, rgb(208 49 9));
+}
