--- a/src/remarkable-ui/editors/InputField/InputField.module.css
+++ b/src/remarkable-ui/editors/InputField/InputField.module.css
@@ -88,16 +88,16 @@
 }
 
 .inputError {
-  border-color: var(--em-text-input-border-color-error, rgb(208 49 9));
-  border-width: var(--em-text-input-border-width-error, 2px);
+  border: var(--em-text-input-border-width-error, 2px) solid var(--em-text-input-border-color-error, #BC1010);
 }
 
 .errorMessage {
   padding-top: var(--em-form-padding-small, 0.5rem);
   display: flex;
-  align-items: center;
-  font-size: var(--em-form-form-font-font-size-required, 0.75rem);
-  font-weight: var(--em-form-form-font-font-weight, 400);
-  line-height: var(--em-form-form-font-line-height, 1rem);
-  color: var(--em-text-input-label-color-error, rgb(208 49 9));
+  color: var(--em-text-input-label-color-error, #bc1010);
+  font-family: var(--em-text-input-label-font-font-family, Inter);
+  font-size: var(--em-text-input-label-font-size, 0.75rem);
+  font-weight: var(--em-text-input-label-font-weight-default, 500);
+  line-height: var(--em-text-input-label-font-line-height, 0.875rem);
 }
+
