--- a/src/remarkable-ui/editors/select/shared/SelectButton/SelectButton.module.css
+++ b/src/remarkable-ui/editors/select/shared/SelectButton/SelectButton.module.css
@@ -82,6 +82,5 @@
 }
 
 .buttonError {
-  border-color: var(--em-text-input-border-color-error, rgb(208 49 9));
-  border-width: var(--em-text-input-border-width-error, 2px);
+  border: var(--em-text-input-border-width-error, 2px) solid var(--em-status-negative-foreground, #BC1010);
 }
