--- a/src/remarkable-ui/editors/select/SingleSelectField/SingleSelectField.module.css
+++ b/src/remarkable-ui/editors/select/SingleSelectField/SingleSelectField.module.css
@@ -1,14 +1,5 @@
 .selectField {
   display: flex;
   flex-direction: column;
-}
-
-.errorMessage {
-  padding-top: var(--em-form-padding-small, 0.5rem);
-  display: flex;
-  color: var(--em-text-input-label-color-error, #bc1010);
-  font-family: var(--em-text-input-label-font-font-family, Inter);
-  font-size: var(--em-text-input-label-font-size, 0.75rem);
-  font-weight: var(--em-text-input-label-font-weight-default, 500);
-  line-height: var(--em-text-input-label-font-line-height, 0.875rem);
+  gap: var(--em-form-padding-small, 0.5rem);
 }
