EM-2431: Add error state to inputs (#188)
* feat: add error state to inputs

* chore: clean up

* feat: match the error state design with new figma design

* build: add changeset

* chore: clean up

* feat: create FormErrorMessage component

* chore: remove line height

* chore: remove display

* feat: use error and errorMessage separately

* chore: rename the component

* chore: convert to boolean

--- a/src/remarkable-ui/editors/select/shared/SelectButton/SelectButton.module.css
+++ b/src/remarkable-ui/editors/select/shared/SelectButton/SelectButton.module.css
@@ -80,3 +80,8 @@
 .loading {
   animation: spin 1s linear infinite;
 }
+
+.buttonError {
+  border: var(--em-text-input-border-width-error, 2px) solid
+    var(--em-status-negative-foreground, #bc1010);
+}
