--- a/src/remarkable-ui/editors/InputField/InputField.module.css
+++ b/src/remarkable-ui/editors/InputField/InputField.module.css
@@ -73,7 +73,9 @@
 }
 
 .inputContainer {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: var(--em-form-padding-small, 0.5rem);
 }
 
 .requiredText {
@@ -85,4 +87,9 @@
   font-weight: var(--em-form-form-font-font-weight, 400);
   line-height: var(--em-form-form-font-line-height, 1rem);
   color: var(--em-form-section-font-font-color, #212129);
+}
+
+.inputError {
+  border: var(--em-text-input-border-width-error, 2px) solid
+    var(--em-text-input-border-color-error, #bc1010);
 }
