--- a/src/remarkable-ui/charts/tables/components/TableHeader/TableHeader.module.css
+++ b/src/remarkable-ui/charts/tables/components/TableHeader/TableHeader.module.css
@@ -40,5 +40,15 @@
       font-weight: var(--em-table-font-font-weight-medium, 500);
       line-height: var(--em-table-font-line-height, 0.875rem);
     }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: calc(-1 * var(--em-table-border-width-default, 1px));
+      width: var(--em-table-border-width-default, 1px);
+      background: var(--em-table-border-color-default, #ededf1);
+    }
   }
 }
